# PlayGround

./: .gitignore  README.md  danger.py  index.html  p1.py  requirements.txt  webapp.py
Basic-text-summerization/: basic-text-summerization.py
DevGuard/: README.md  dashbord.py  database.py  index.html  main.py  requirements.txt  test.py  vul.py
LangChain/: langchain_helper.py  main.py  ollama1.py  test.py  tutorial1.py  tutorial2.py  two.py
Pipeline_1/: pipeline_app.py  pipeline_model.pkl  pipleline_basic.py
SGP/: requirements.txt  streamlit_app.py
SGP/app/: main.py
SGP/questions/: hr.csv  technical.csv
SGP_v2/: streamlit_app.py  synthetic_dataset_generator.py  train_model.py
SGP_v2/data/: synthetic_career_data.csv
SGP_v2/models/: mlb.pkl  student_embeddings.npy
algo_arena/: data.md  desc.txt  test_guide.md
algo_arena/backend/: main.py  problems.json  test_algo_arena.py  test_sockets.py
data/: synthetic_career_data.csv
fast-api_basics/: p1.py
flight_price_prediction_pipeline_practice/: model.py  test.py
iris_streamlit/: p1.py
iris_test/: README.md
odo/: README.md  dockercompose.yml
portfolio/: index1.html  script.js  styles.css
project/: preprocess.py  recommender.py  streamlit_app.py  test.py
projectX/: pyproject.toml  setup_guide.md
projectX/chatbot/: bot.py  ingest_calendar.py  ingest_drive.py  ingest_gmail.py  rag.py  requirements.txt
resumer-parser/: app.py  prompts.py  requirements.txt  resume_parser.py
test-projects/: ML_test.py  app.py  credentials.yaml  one.py  p2.py  streamlit_test.py  test-ocr.py  testt.py  two.py
(+69 files in other folders)
