[project]
name = "projectx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.7.1",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "icecream>=2.2.0",
    "langchain>=1.2.15",
    "openai>=2.32.0",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
